--- a/_config.yml
+++ b/_config.yml
@@ -104,5 +104,12 @@ theme: aurora
 deploy:
   type: ''
 
+# 谷歌、百度站点地图生成
+Plugins:
+- hexo-generator-baidu-sitemap
+- hexo-generator-sitemap
+
+baidusitemap:
+  path: baidusitemap.xml
 sitemap:
   path: sitemap.xml
